--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
   <p><strong>¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
 
-  <h2>Novedades</h2>
+  <h2>📢 Novedades</h2>
 
   <h3>Cómo subir tu resumen</h3>
   <p style="text-align: justify;">
@@ -96,6 +96,34 @@
     </div>
     <div class="flyer-container">
       <img src="assets/registration.png" alt="Registro 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <h3> Curso en la 5a Semana de la Geofísica 🌍✨</h3>
+  
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Fundamentos de Adquisición Sísmica Terrestre</strong><br>
+      👨‍🏫 Con el Ing. esp. Jaime Checa
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Viernes 7 de noviembre<br>
+      ⏰ 8 am - 12 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre geometría de adquisición 3D, densidad vs fold, fuentes y receptores, y mucho más 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/curso_1.png" alt="Curso 1 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+    <div class="flyer-container">
+      <img src="assets/curso_2.png" alt="Curso 2 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
