--- a/index.html
+++ b/index.html
@@ -127,6 +127,32 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Conceptos Prácticos para Geocientíficos en el Uso de Datos Magnéticos y Gravedad</strong><br>
+      👨‍🏫 Con el Ph.D. Bogdan Nitescu
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles 5 de noviembre<br>
+      ⏰ 2 - 5 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre el uso práctico de datos magnéticos y de gravedad en geociencias 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/curso_3.png" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+    <div class="flyer-container">
+      <img src="assets/curso_4.png" alt="Curso 4 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
