--- a/index.html
+++ b/index.html
@@ -153,6 +153,32 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Conceptos de Magnetotelúrica</strong><br>
+      👨‍🏫 Con el Ing. M.Sc. Juan Camilo Herrera
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Martes 4 de noviembre<br>
+      ⏰ 3 - 5 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre los fundamentos y aplicaciones de la magnetotelúrica 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/curso_5.png" alt="Curso 5 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+    <div class="flyer-container">
+      <img src="assets/curso_6.png" alt="Curso 6 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
