--- a/index.html
+++ b/index.html
@@ -179,6 +179,32 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Métodos de Gravedad y Magnéticos en la Exploración de Recursos Minerales</strong><br>
+      👨‍🏫 Con el Ph.D. Bogdan Nitescu
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles 5 de noviembre<br>
+      ⏰ 2 - 5 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre la aplicación de métodos geofísicos en la exploración minera 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/curso_7.png" alt="Curso 7 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+    <div class="flyer-container">
+      <img src="assets/curso_8.png" alt="Curso 8 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
