--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Miércoles 5 de noviembre<br>
-      ⏰ 2 - 5 pm<br>
+      🗓️ Jueves 6 de noviembre<br>
+      ⏰ 8 - 9 am<br>
       📍 Salón por definir
     </p>
 
@@ -202,6 +202,77 @@
     </div>
     <div class="flyer-container">
       <img src="assets/curso_8.png" alt="Curso 8 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <h3> Charlas en la 5a Semana de la Geofísica 🎤✨</h3>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Geofísica Aplicada a la Agricultura: Herramientas, Avances y Desafíos</strong><br>
+      👩‍🏫 Con la Ph.D. Nesrine Chaali
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves 6 de noviembre<br>
+      ⏰ 10 am - 11 am<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Descubre cómo la geofísica está revolucionando la agricultura moderna 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_1.png" alt="Charla 1 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Sismología</strong><br>
+      👩‍🏫 Con la Ph.D. Viviana Dionicio
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Martes 4 de noviembre<br>
+      ⏰ 2 am - 3 am<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Explora los fundamentos y aplicaciones de la sismología 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_2.png" alt="Charla 2 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Caracterización del Área Geotérmica de Cerro Machín Mediante Integración de Resistividad (MT) y Velocidades Sísmicas 3D</strong><br>
+      👨‍🏫 Con el Ing. M.Sc. Juan Camilo Herrera
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles 5 de noviembre<br>
+      ⏰ 8 am - 9 am<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Conoce cómo se integran métodos geofísicos para caracterizar áreas geotérmicas 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_3.png" alt="Charla 3 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
