update charlas y cursos

--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
 
   <div class="flyers-section">
     <div class="flyer-container">
-      <img src="assets/curso_3.png" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
+      <img src="assets/curso_7.png" alt="Curso 3 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
     <div class="flyer-container">
       <img src="assets/curso_4.png" alt="Curso 4 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+  <!-- <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Conceptos de Magnetotelúrica</strong><br>
       👨‍🏫 Con el Ing. M.Sc. Juan Camilo Herrera
@@ -168,42 +168,16 @@
     <p style="margin: 15px 0;">
       💡 Aprende sobre los fundamentos y aplicaciones de la magnetotelúrica 🚀
     </p>
-  </div>
+  </div> -->
 
-  <div class="flyers-section">
+  <!-- <div class="flyers-section">
     <div class="flyer-container">
       <img src="assets/curso_5.png" alt="Curso 5 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
     <div class="flyer-container">
       <img src="assets/curso_6.png" alt="Curso 6 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Métodos de Gravedad y Magnéticos en la Exploración de Recursos Minerales</strong><br>
-      👨‍🏫 Con el Ph.D. Bogdan Nitescu
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Jueves 6 de noviembre<br>
-      ⏰ 8 - 9 am<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aprende sobre la aplicación de métodos geofísicos en la exploración minera 🚀
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/curso_7.png" alt="Curso 7 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-    <div class="flyer-container">
-      <img src="assets/curso_8.png" alt="Curso 8 - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
+  </div> -->
 
   <h3> Charlas en la 5a Semana de la Geofísica 🎤✨</h3>
 
@@ -230,7 +204,7 @@
     </div>
   </div>
 
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+  <!-- <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
       <strong>🔹 Sismología</strong><br>
       👩‍🏫 Con la Ph.D. Viviana Dionicio
@@ -245,13 +219,13 @@
     <p style="margin: 15px 0;">
       💡 Explora los fundamentos y aplicaciones de la sismología 🚀
     </p>
-  </div>
+  </div> -->
 
-  <div class="flyers-section">
+  <!-- <div class="flyers-section">
     <div class="flyer-container">
       <img src="assets/charla_2.png" alt="Charla 2 - 5° Semana de la Geofísica" class="flyer-image">
     </div>
-  </div>
+  </div> -->
 
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
@@ -273,6 +247,29 @@
   <div class="flyers-section">
     <div class="flyer-container">
       <img src="assets/charla_3.png" alt="Charla 3 - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Métodos de Gravedad y Magnéticos en la Exploración de Recursos Minerales</strong><br>
+      👨‍🏫 Con el Ph.D. Bogdan Nitescu
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves 6 de noviembre<br>
+      ⏰ 8 - 9 am<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre la aplicación de métodos geofísicos en la exploración minera 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/curso_8.png" alt="Charla - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
