--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
     </p>
 
     <p style="margin: 15px 0;">
-      🗓️ Jueves 6 de noviembre<br>
-      ⏰ 10 am - 11 am<br>
+      🗓️ Viernes 7 de noviembre<br>
+      ⏰ 11 am - 12 am<br>
       📍 Salón por definir
     </p>
 
@@ -270,6 +270,29 @@
   <div class="flyers-section">
     <div class="flyer-container">
       <img src="assets/curso_8.png" alt="Charla - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 GAIRA: Geología + Artificial Intelligence + Realidad Aumentada</strong><br>
+      👨‍🏫 Con el Geól. M.Sc. Sergio Andrés García
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Martes 4 de noviembre<br>
+      ⏰ 3 pm - 4 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Descubre la integración de geología, inteligencia artificial y realidad aumentada 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_4.png" alt="Charla GAIRA - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
