--- a/index.html
+++ b/index.html
@@ -296,6 +296,52 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Redes de Monitoreo Sismológico en Colombia, Más de 30 Años Generando Nuevo Conocimiento y Aportando a la Gestión del Riesgo del País</strong><br>
+      👩‍🏫 Con la M.Sc. Viviana Dionicio
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Martes 4 de noviembre<br>
+      ⏰ 2 pm - 3 pm<br>
+      📍 Auditorio Alberto Elías Hernández
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Descubre la historia y el impacto de las redes de monitoreo sismológico en Colombia 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_5.png" alt="Charla Redes de Monitoreo - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Tendencias de Data Science para el Futuro de las Geociencias y la Industria Oil & Gas</strong><br>
+      👨‍🏫 Con el Geól. M.Sc. Nilson Delgado
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Viernes 7 de noviembre<br>
+      ⏰ 1 pm - 2 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Explora las tendencias de ciencia de datos en geociencias y la industria petrolera 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_6.jpeg" alt="Charla Data Science - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
