--- a/index.html
+++ b/index.html
@@ -342,6 +342,52 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Clustering y Proyecciones Topológicas (GMT, SOM, t-SNE) en la Caracterización de Yacimientos: Criterios, Validación y Errores Comunes</strong><br>
+      👨‍🏫 Con el Geól. M.Sc. Nilson Delgado
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves 6 de noviembre<br>
+      ⏰ 3 pm - 4 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aprende sobre técnicas avanzadas de clustering y proyecciones topológicas para caracterización de yacimientos 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_7.jpeg" alt="Charla Clustering - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Geofísica Aplicada a la Búsqueda de Personas Dadas por Desaparecidas</strong><br>
+      👨‍🏫 Con el Ing. M.Sc. Efraín Andrés Laverde
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves 6 de noviembre<br>
+      ⏰ Hora por definir<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Conoce cómo la geofísica contribuye a la búsqueda de personas desaparecidas 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_8.png" alt="Charla Geofísica Forense - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
