--- a/index.html
+++ b/index.html
@@ -388,6 +388,31 @@
     </div>
   </div>
 
+  <h3> Salida de Campo 🌍🎒</h3>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Práctica de Magnetotelúrica Incluyendo su Adquisición y Procesamiento</strong><br>
+      👨‍🏫 Con el Ing. M.Sc. Efraín Andrés Laverde
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Sábado 8 de noviembre<br>
+      ⏰ Hora por definir<br>
+      📍 Salida de campo
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Participa en una práctica de campo sobre magnetotelúrica con adquisición y procesamiento de datos 🚀
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/salida_campo.png" alt="Salida de Campo - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h2>Organizadores</h2>
 
   <!-- ===== Organizers with photos ===== -->
