--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
     </div>
   </div>
 
+  <h3>Apoyo económico</h3>
+
+  <div class="announcement" style="background-color: #fff8e1; padding: 20px; border-radius: 10px; margin: 20px 0;">
+    <p style="margin: 15px 0; text-align: justify;">
+      Si eres estudiante de pregrado y necesitas apoyo económico para asistir a la 5ª Semana de la Geofísica, inscríbete aquí:
+      <a href="https://forms.gle/uXW6UvipsrJJgSxg6
+" style="font-weight: bold; margin-left: 6px;">Formulario de inscripción</a>
+    </p>
+    <div class="flyers-section">
+      <div class="flyer-container">
+        <img src="assets/apoyo_economico.jpeg" alt="Apoyo económico - 5ª Semana de la Geofísica" class="flyer-image">
+      </div>
+    </div>
+  </div>
+
   <h3> Curso en la 5a Semana de la Geofísica 🌍✨</h3>
   
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
