--- a/index.html
+++ b/index.html
@@ -290,6 +290,29 @@
 
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
+      <strong>🔹 Implementación de Modelos de Lenguaje Natural para el fortalecimiento de la infraestructura de datos geológicos</strong><br>
+      👨‍🏫 Por el Geól. M.Sc. John Ortiz
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Miércoles 5 de noviembre<br>
+      ⏰ 11 am - 12 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Cómo aplicar modelos de lenguaje natural para mejorar la organización y accesibilidad de datos geológicos.
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_9.jpeg" alt="Charla John Ortiz - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
       <strong>🔹 GAIRA: Geología + Artificial Intelligence + Realidad Aumentada</strong><br>
       👨‍🏫 Con el Geól. M.Sc. Sergio Andrés García
     </p>
