--- a/index.html
+++ b/index.html
@@ -426,6 +426,29 @@
     </div>
   </div>
 
+  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
+    <p style="margin: 15px 0;">
+      <strong>🔹 Geofísica aplicada en el fortalecimiento de la geodesia en Colombia y el estudio del campo magnético terrestre: Aportes del I.G.A.C</strong><br>
+      👩‍🏫 Por la Ing. M.Sc. Maria Rosa Alva
+    </p>
+
+    <p style="margin: 15px 0;">
+      🗓️ Jueves, 6 de noviembre<br>
+      ⏰ 2 pm - 3 pm<br>
+      📍 Salón por definir
+    </p>
+
+    <p style="margin: 15px 0;">
+      💡 Aportes del I.C.A.C. al estudio del campo magnético terrestre y el fortalecimiento de la geodesia en Colombia.
+    </p>
+  </div>
+
+  <div class="flyers-section">
+    <div class="flyer-container">
+      <img src="assets/charla_10.jpeg" alt="Charla Maria Rosa Alva - 5° Semana de la Geofísica" class="flyer-image">
+    </div>
+  </div>
+
   <h3> Salida de Campo 🌍🎒</h3>
 
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
