--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <td class="navigation"><a class="current" title="Conference Home Page" href=".">Inicio</a></td>
       <td class="navigation"><a title="Register for the Conference" href="registration">Registro</a></td>
       <td class="navigation"><a title="Conference Program" href="program">Programa</a></td>
+      <td class="navigation"><a title="Cursos" href="curso">Cursos</a></td>
       <td class="navigation"><a title="Directions to the Conference" href="directions">Cómo llegar</a></td>
       <td class="navigation"><a title="Conference Flyer" href="flyer">Contacto</a></td>
     </tr>
@@ -96,21 +97,6 @@
     </div>
     <div class="flyer-container">
       <img src="assets/registration.png" alt="Registro 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <h3>Apoyo económico</h3>
-
-  <div class="announcement" style="background-color: #fff8e1; padding: 20px; border-radius: 10px; margin: 20px 0;">
-    <p style="margin: 15px 0; text-align: justify;">
-      Si eres estudiante de pregrado y necesitas apoyo económico para asistir a la 5ª Semana de la Geofísica, inscríbete aquí:
-      <a href="https://forms.gle/uXW6UvipsrJJgSxg6
-" style="font-weight: bold; margin-left: 6px;">Formulario de inscripción</a>
-    </p>
-    <div class="flyers-section">
-      <div class="flyer-container">
-        <img src="assets/apoyo_economico.jpeg" alt="Apoyo económico - 5ª Semana de la Geofísica" class="flyer-image">
-      </div>
     </div>
   </div>
 
@@ -290,29 +276,6 @@
 
   <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
     <p style="margin: 15px 0;">
-      <strong>🔹 Implementación de Modelos de Lenguaje Natural para el fortalecimiento de la infraestructura de datos geológicos</strong><br>
-      👨‍🏫 Por el Geól. M.Sc. John Ortiz
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Miércoles 5 de noviembre<br>
-      ⏰ 11 am - 12 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Cómo aplicar modelos de lenguaje natural para mejorar la organización y accesibilidad de datos geológicos.
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_9.jpeg" alt="Charla John Ortiz - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
       <strong>🔹 GAIRA: Geología + Artificial Intelligence + Realidad Aumentada</strong><br>
       👨‍🏫 Con el Geól. M.Sc. Sergio Andrés García
     </p>
@@ -423,29 +386,6 @@
   <div class="flyers-section">
     <div class="flyer-container">
       <img src="assets/charla_8.png" alt="Charla Geofísica Forense - 5° Semana de la Geofísica" class="flyer-image">
-    </div>
-  </div>
-
-  <div class="announcement" style="background-color: #f5f5f5; padding: 20px; border-radius: 10px; margin: 20px 0;">    
-    <p style="margin: 15px 0;">
-      <strong>🔹 Geofísica aplicada en el fortalecimiento de la geodesia en Colombia y el estudio del campo magnético terrestre: Aportes del I.G.A.C</strong><br>
-      👩‍🏫 Por la Ing. M.Sc. Maria Rosa Alva
-    </p>
-
-    <p style="margin: 15px 0;">
-      🗓️ Jueves, 6 de noviembre<br>
-      ⏰ 2 pm - 3 pm<br>
-      📍 Salón por definir
-    </p>
-
-    <p style="margin: 15px 0;">
-      💡 Aportes del I.C.A.C. al estudio del campo magnético terrestre y el fortalecimiento de la geodesia en Colombia.
-    </p>
-  </div>
-
-  <div class="flyers-section">
-    <div class="flyer-container">
-      <img src="assets/charla_10.jpeg" alt="Charla Maria Rosa Alva - 5° Semana de la Geofísica" class="flyer-image">
     </div>
   </div>
 
