--- a/curso/index.html
+++ b/curso/index.html
@@ -61,30 +61,34 @@
   <p style="text-align: justify;">A continuación están los flyers de los cursos ofrecidos durante la 5° Semana de la Geofísica. Haz click en cada imagen para verla en tamaño completo.</p>
 
   <div class="curso-grid">
+
+    <div class="curso-card">
+      <a class="curso-lightbox" href="assets/CURSO/CURSO_5.png"><img src="assets/CURSO/CURSO_5.png" alt="Curso 5"></a>
+      <div class="curso-title"></div>
+    </div>
+    
     <div class="curso-card">
       <a class="curso-lightbox" href="assets/CURSO/CURSO_1.png"><img src="assets/CURSO/CURSO_1.png" alt="Curso 1"></a>
-      <div class="curso-title">Curso 1</div>
+      <div class="curso-title">Fundamentos de Adquisición Sísmica Terrestre</div>
     </div>
 
     <div class="curso-card">
       <a class="curso-lightbox" href="assets/CURSO/CURSO_2.png"><img src="assets/CURSO/CURSO_2.png" alt="Curso 2"></a>
-      <div class="curso-title">Curso 2</div>
+      <div class="curso-title">Procesamiento de datos magnetotelúricos en el software EMPOWER</div>
     </div>
 
     <div class="curso-card">
       <a class="curso-lightbox" href="assets/CURSO/CURSO_3.png"><img src="assets/CURSO/CURSO_3.png" alt="Curso 3"></a>
-      <div class="curso-title">Curso 3</div>
+      <div class="curso-title">Conceptos prácticos para geocientíficos en el uso de datos magnéticos y gravedad
+      </div>
     </div>
 
     <div class="curso-card">
       <a class="curso-lightbox" href="assets/CURSO/CURSO_4.png"><img src="assets/CURSO/CURSO_4.png" alt="Curso 4"></a>
-      <div class="curso-title">Curso 4</div>
+      <div class="curso-title">Interpretaciones Sismotécnicas</div>
     </div>
 
-    <div class="curso-card">
-      <a class="curso-lightbox" href="assets/CURSO/CURSO_5.png"><img src="assets/CURSO/CURSO_5.png" alt="Curso 5"></a>
-      <div class="curso-title">Curso 5</div>
-    </div>
+    
   </div>
 
   <!-- Lightbox / Modal -->
