--- a/curso/index.html
+++ b/curso/index.html
@@ -57,8 +57,8 @@
     </tr>
   </table>
 
-  <h2>Cursos y Talleres</h2>
-  <p style="text-align: justify;">A continuación están los flyers de los cursos ofrecidos durante la 5° Semana de la Geofísica. Haz click en cada imagen para verla en tamaño completo.</p>
+  <h2>Cursos</h2>
+  <p style="text-align: justify;">A continuación encuentras los cursos ofrecidos durante la 5° Semana de la Geofísica. Haz click en cada imagen para verla en tamaño completo.</p>
 
   <div class="curso-grid">
 
@@ -66,7 +66,7 @@
       <a class="curso-lightbox" href="assets/CURSO/CURSO_5.png"><img src="assets/CURSO/CURSO_5.png" alt="Curso 5"></a>
       <div class="curso-title"></div>
     </div>
-    
+
     <div class="curso-card">
       <a class="curso-lightbox" href="assets/CURSO/CURSO_1.png"><img src="assets/CURSO/CURSO_1.png" alt="Curso 1"></a>
       <div class="curso-title">Fundamentos de Adquisición Sísmica Terrestre</div>
