--- a/curso/index.html
+++ b/curso/index.html
@@ -28,13 +28,14 @@
     .curso-card img { max-width: 100%; height: auto; border-radius: 4px; }
     .curso-title { font-weight: 700; margin-top: 8px; }
     .back-link { margin-top: 20px; display:block; text-align:center; }
-    /* Lightbox styles */
+  /* Lightbox styles */
     #lightbox { display: none; position: fixed; inset: 0; z-index: 10000; }
     #lightbox[aria-hidden="false"] { display: block; }
     #lightbox-backdrop { position: fixed; inset: 0; background: rgba(0,0,0,0.75); }
     #lightbox-content { position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); max-width: 94%; max-height: 92%; padding: 12px; box-sizing: border-box; }
     #lightbox-content img { display: block; max-width: 100%; max-height: 80vh; margin: 0 auto; border-radius: 6px; }
-    #lightbox-caption { color: #fff; text-align: center; margin-top: 8px; }
+  /* hide caption text when zooming images (local and global lightboxes) */
+  #lightbox-caption, #site-lightbox-caption { display: none !important; }
     #lightbox-close { position: absolute; right: 6px; top: 6px; background: rgba(0,0,0,0.6); color: #fff; border: none; font-size: 22px; line-height: 1; padding: 6px 10px; border-radius: 4px; cursor: pointer; }
     #lightbox-close:focus { outline: 2px solid #fff; }
   </style>
@@ -130,7 +131,6 @@
       function openLightbox(href, alt){
         lbImage.src = href;
         lbImage.alt = alt || '';
-        lbCaption.textContent = alt || '';
         lightbox.setAttribute('aria-hidden','false');
         document.body.style.overflow = 'hidden';
         lbClose.focus();
@@ -145,6 +145,7 @@
       links.forEach(a => {
         a.addEventListener('click', function(e){
           e.preventDefault();
+          e.stopPropagation();
           const href = a.getAttribute('href');
           openLightbox(href, a.querySelector('img')?.alt);
         });
