--- a/index.html
+++ b/index.html
@@ -429,10 +429,21 @@
         <div class="sponsor-name">Paul Yesid Goyes Peñafiel</div>
         <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
       </td>
+    </tr>
+  </table>
+
+  <h3 style="margin-top: 24px;">Comité Científico</h3>
+  <table class="sponsors">
+    <tr>
       <td class="sponsor">
-        <img src="assets/HDSP.png" alt="Grupo HDSP">
-        <div class="sponsor-name">Grupo HDSP</div>
-        <div class="sponsor-email"><a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></div>
+        <img src="assets/Henry_Arguello.jpg" alt="Henry Arguello">
+        <div class="sponsor-name">Henry Arguello</div>
+        <div class="sponsor-email"><a href="mailto:henarfu@uis.edu.co">henarfu@uis.edu.co</a></div>
+      </td>
+      <td class="sponsor">
+        <img src="assets/Sait_Khurama.png" alt="Sait Khurama">
+        <div class="sponsor-name">Sait Khurama</div>
+        <div class="sponsor-email"><a href="mailto:skhurama@uis.edu.co">skhurama@uis.edu.co</a></div>
       </td>
     </tr>
   </table>
