--- a/index.html
+++ b/index.html
@@ -422,28 +422,61 @@
       <td class="sponsor">
         <img src="assets/Ana.jpeg" alt="Ana Gabriela Mantilla Dulcey">
         <div class="sponsor-name">Ana Gabriela Mantilla Dulcey</div>
+        <div class="sponsor-role">
+          <div>Geóloga</div>
+          <div>MSc(s) Maestría en Geofísica</div>
+        </div>
         <div class="sponsor-email"><a href="mailto:ana.mantilla@correo.uis.edu.co">ana.mantilla@correo.uis.edu.co</a></div>
       </td>
       <td class="sponsor">
         <img src="assets/Paul.jpeg" alt="Paul Yesid Goyes Peñafiel">
         <div class="sponsor-name">Paul Yesid Goyes Peñafiel</div>
+        <div class="sponsor-role">
+          <div>Geólogo</div>
+          <div>MSc en Geofísica</div>
+          <div>PhD(c) en Ciencias de la Computación</div>
+        </div>
         <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
       </td>
     </tr>
   </table>
 
-  <h3 style="margin-top: 24px;">Comité Científico</h3>
+  <h2 style="margin-top: 24px;">Comité Científico</h2>
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <img src="assets/Henry_Arguello.jpg" alt="Henry Arguello">
+        <img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello">
         <div class="sponsor-name">Henry Arguello</div>
+        <div class="sponsor-role">
+          <div>Ingeniero Eléctrico</div>
+          <div>MSc en Ingeniería Eléctrica</div>
+          <div>PhD en Ingeniería Eléctrica y Computación</div>
+        </div>
         <div class="sponsor-email"><a href="mailto:henarfu@uis.edu.co">henarfu@uis.edu.co</a></div>
       </td>
       <td class="sponsor">
         <img src="assets/Sait_Khurama.png" alt="Sait Khurama">
         <div class="sponsor-name">Sait Khurama</div>
+        <div class="sponsor-role">
+          <div>Geólogo</div>
+          <div>MSc en Geofísica</div>
+        </div>
         <div class="sponsor-email"><a href="mailto:skhurama@uis.edu.co">skhurama@uis.edu.co</a></div>
+      </td>
+    </tr>
+  </table>
+
+  <h2 style="margin-top: 24px;">Comité Administrativo</h2>
+  <table class="sponsors">
+    <tr>
+      <td class="sponsor">
+        <img src="assets/ANITA.jpeg" alt="Ana Gutierrez">
+        <div class="sponsor-name">Ana Gutierrez</div>
+         <div class="sponsor-role">
+          <div>Gestión Empresarial</div>
+          <div>MSc en Direción y Gestión de Proyectos</div>
+        </div>
+        <div class="sponsor-email"><a href="mailto:hdsp@uis.edu.co">hdsp@uis.edu.co</a></div>
       </td>
     </tr>
   </table>
