--- a/index.html
+++ b/index.html
@@ -439,6 +439,26 @@
         <div class="sponsor-email"><a href="mailto:ypgoype@correo.uis.edu.co">ypgoype@correo.uis.edu.co</a></div>
       </td>
     </tr>
+      <tr>
+        <td class="sponsor">
+          <img src="assets/Daniela.jpg" alt="Daniela Quintero">
+          <div class="sponsor-name">Daniela Quintero</div>
+          <div class="sponsor-role">
+            <div>Geóloga</div>
+          </div>
+          <div class="sponsor-email"><a href="mailto:daniela2202434@correo.uis.edu.co">daniela2202434@correo.uis.edu.co</a></div>
+        </td>
+        <td class="sponsor">
+          <img src="assets/LEON.jpeg" alt="León Suárez">
+          <div class="sponsor-name">León Suárez</div>
+          <div class="sponsor-role">
+            <div>Ingeniero Civil</div>
+            <div>MSc en Ingeniería de Sistemas e Informática</div>
+            <div>PhD(s) en Ciencias de la Computación</div>
+          </div>
+          <div class="sponsor-email"><a href="mailto:">leon2238325@correo.uis.edu.co</a></div>
+        </td>
+      </tr>
   </table>
 
   <h2 style="margin-top: 24px;">Comité Científico</h2>
