--- a/index.html
+++ b/index.html
@@ -33,23 +33,14 @@
     </tr>
   </table>
 
-  <h2>Bienvenido a la 5° Semana de la Geofísica</h2>
+  <h2>Bienvenidos a la 5a Semana de la Geofísica</h2>
 
-  <p style="text-align: justify;">  
-    Es un gran honor invitarte a la <strong>quinta edición de la Semana de la Geofísica</strong>, 
-    que tendrá lugar del <strong>4 al 8 de noviembre de 2024</strong> en las instalaciones de la 
-    <strong>Universidad Industrial de Santander (UIS)</strong>. Este evento, reúne a destacados expertos nacionales e internacionales, 
-    estudiantes, profesionales e investigadores apasionados por la <strong>geofísica, la inteligencia artificial 
-    y la geología ambiental</strong>, en un espacio académico, científico y social único en el país.
+  <p style="text-align: justify;">
+    Es un gran honor invitarte a la <strong>5a edición de la Semana de la Geofísica</strong>, que tendrá lugar del <strong>4 al 8 de noviembre de 2025</strong> en las instalaciones de la <strong>Universidad Industrial de Santander (UIS), sede Bucaramanga</strong>. Este evento, reúne a destacados expertos nacionales e internacionales, estudiantes, profesionales e investigadores apasionados por la <strong>geofísica, la inteligencia artificial y la geología ambiental</strong>, en un espacio académico, científico y social único en el país.
   </p>
 
   <p style="text-align: justify;">
-    La 5° Semana de la Geofísica se consolida como el encuentro más importante en su campo a nivel nacional, 
-    donde confluyen la innovación, la interdisciplinariedad y la búsqueda de soluciones para los retos actuales 
-    en exploración, monitoreo ambiental, transición energética y gestión del riesgo. Durante cinco días, 
-    podrás disfrutar de <strong>conferencias magistrales, sesiones temáticas, presentaciones orales y de pósters</strong>, 
-    además de participar en un <strong>Challenge académico</strong>, con premios para los mejores trabajos de investigación 
-    y propuestas más creativas.
+    La 5a Semana de la Geofísica se consolida como el encuentro más importante en su campo a nivel nacional, donde se unen la innovación, la interdisciplinariedad y la búsqueda de soluciones para los retos actuales en exploración de fuentes de energía, monitoreo ambiental, transición energética y gestión del riesgo. Durante cinco días, podrás disfrutar de conferencias magistrales, sesiones temáticas, presentaciones orales y de pósters, además de participar en un challenge académico, con premios para los mejores trabajos de investigación y propuestas más creativas.
   </p>
 
   <!-- <h2>Líneas temáticas</h2>
@@ -71,14 +62,7 @@
   </ul> -->
 
   <p style="text-align: justify;">
-    Además de su programa académico, el evento contará con actividades sociales y de integración, 
-    diseñadas para fortalecer redes de colaboración y fomentar un ambiente dinámico y enriquecedor 
-    para todos los participantes.
-  </p>
-
-  <p style="text-align: justify;">
-    La <strong>5° Semana de la Geofísica</strong> es más que un congreso: es una experiencia para aprender, 
-    compartir y construir juntos el futuro de la geociencia en Colombia.
+    Además de su programa académico, el evento contará con actividades sociales y de integración, diseñadas para fortalecer redes de colaboración y fomentar un ambiente dinámico y enriquecedor para todos los participantes. La 5a Semana de la Geofísica es una experiencia para aprender, compartir y construir juntos el futuro de la geociencia en Colombia.
   </p>
 
   <p><strong>¡Te esperamos en Bucaramanga para ser parte de este gran encuentro!</strong></p>
