--- a/program/index.html
+++ b/program/index.html
@@ -55,8 +55,7 @@
         <button data-src="assets/PROGRAMA/SEMANA_GEOFÍSICA-13.pdf">Jueves</button>
         <button data-src="assets/PROGRAMA/SEMANA_GEOFÍSICA-14.pdf">Viernes</button>
         <a id="open-new" class="" href="assets/PROGRAMA/SEMANA_GEOFÍSICA-9.pdf" target="_blank" rel="noopener">Abrir en nueva pestaña</a>
-        <button id="fullscreen-btn">Pantalla completa</button>
-        <button id="close-viewer" title="Cerrar visor">Cerrar</button>
+  <button id="fullscreen-btn">Pantalla completa</button>
       </div>
 
       <iframe id="program-iframe" class="program-iframe" src="assets/PROGRAMA/SEMANA_GEOFÍSICA-9.pdf" title="Visor de programa PDF"></iframe>
@@ -66,7 +65,6 @@
           const buttons = document.querySelectorAll('.viewer-controls button[data-src]');
           const iframe = document.getElementById('program-iframe');
           const openNew = document.getElementById('open-new');
-          const closeBtn = document.getElementById('close-viewer');
           function setActive(btn){
             buttons.forEach(b=>b.classList.remove('active'));
             btn.classList.add('active');
@@ -77,8 +75,7 @@
               iframe.src = src;
               openNew.href = src;
               setActive(btn);
-              // focus viewer and prevent page scroll
-              document.body.classList.add('viewer-active');
+              // focus viewer but don't prevent page scroll
               iframe.scrollIntoView({behavior:'smooth', block:'start'});
             });
           });
@@ -87,14 +84,10 @@
             else if (iframe.webkitRequestFullscreen) iframe.webkitRequestFullscreen();
             else if (iframe.msRequestFullscreen) iframe.msRequestFullscreen();
           });
-          closeBtn.addEventListener('click', ()=>{
-            document.body.classList.remove('viewer-active');
-            // optionally reset to the top of the page
-            window.scrollTo({top:0, behavior:'smooth'});
-          });
+          // 'Cerrar' button removed — no close-viewer handler needed.
           // when iframe itself receives focus via keyboard, also disable body scroll
           iframe.addEventListener('load', ()=>{
-            // keep viewer-active when loaded
+            // iframe loaded
           });
         })();
       </script>
