--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     </div>
   </div>
 
-  <h2>Organizadores</h2>
+  <h2>Comité Organizador</h2>
 
   <!-- ===== Organizers with photos ===== -->
   <table class="sponsors">
@@ -489,6 +489,36 @@
     <strong>💬 Únete a nuestro grupo de WhatsApp:</strong><br>
     <a href="https://chat.whatsapp.com/FHC0HqhGl6iBsDuotgVhuy" target="_blank" rel="noopener noreferrer" style="color: #25D366; font-weight: bold;">Grupo de información y actualizaciones</a>
   </p>
+
+  <h2 style="margin-top: 24px;">Apoyan</h2>
+  <table class="sponsors">
+    <tr>
+      <td class="sponsor">
+        <img src="assets/HDSP.png" alt="Grupo HDSP">
+        <div class="sponsor-name">Grupo HDSP</div>
+      </td>
+      <td class="sponsor">
+        <img src="assets/gigba-logo-hd.png" alt="Grupo GIGBA">
+        <div class="sponsor-name">Grupo GIGBA</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="sponsor">
+        <img src="assets/SIGAC.svg" alt="Semillero SIGAC">
+        <div class="sponsor-name">Semillero SIGAC</div>
+      </td>
+      <td class="sponsor">
+        <img src="assets/gidco-logo-hd.png" alt="GIDCO">
+        <div class="sponsor-name">GIDCO</div>
+      </td>
+    </tr>
+    <tr>
+      <td class="sponsor" colspan="2" style="text-align:center;">
+        <img src="assets/GeoTienda.jpg" alt="Geotienda">
+        <div class="sponsor-name">Geotienda</div>
+      </td>
+    </tr>
+  </table>
 
   <footer class="footer-enhanced">
     <div class="footer-content">
