--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     </tr>
       <tr>
         <td class="sponsor">
-          <img src="assets/Daniela.jpg" alt="Daniela Quintero">
+          <div class="sponsor-zoom"><img src="assets/Daniela.jpg" alt="Daniela Quintero"></div>
           <div class="sponsor-name">Daniela Quintero</div>
           <div class="sponsor-role">
             <div>Geóloga</div>
@@ -449,7 +449,7 @@
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello">
+        <div class="sponsor-zoom"><img src="assets/Henry_Arguello.jpeg" alt="Henry Arguello"></div>
         <div class="sponsor-name">Henry Arguello</div>
         <div class="sponsor-role">
           <div>Ingeniero Eléctrico</div>
@@ -474,7 +474,7 @@
   <table class="sponsors">
     <tr>
       <td class="sponsor">
-        <img src="assets/ANITA.jpeg" alt="Ana Gutierrez">
+        <div class="sponsor-zoom"><img src="assets/ANITA.jpeg" alt="Ana Gutierrez"></div>
         <div class="sponsor-name">Ana Gutierrez</div>
          <div class="sponsor-role">
           <div>Gestión Empresarial</div>
