--- a/flyer/index.html
+++ b/flyer/index.html
@@ -114,6 +114,8 @@
               <img src="assets/hdsplogo.png" alt="HDSP Logo">
               <img src="assets/gigba-logo-hd.png" alt="GIGBA Logo">
               <img src="assets/gidco-logo-hd.png" alt="GIDCO Logo">
+              <img src="assets/SIGAC.svg" alt="SIGAC Logo">
+              <img src="assets/GeoTienda.jpg" alt="GeoTienda Logo">
             </div>
           </div>
         </div>
