--- a/index.html
+++ b/index.html
@@ -554,12 +554,14 @@
         </div>
         
         <div class="supporters-section">
-          <h4>Apoyan:</h4>
-          <div class="logos-group">
-            <img src="assets/hdsplogo.png" alt="HDSP Logo">
-            <img src="assets/gigba-logo-hd.png" alt="GIGBA Logo">
-            <img src="assets/gidco-logo-hd.png" alt="GIDCO Logo">
-          </div>
+            <h4>Apoyan:</h4>
+            <div class="logos-group">
+              <img src="assets/hdsplogo.png" alt="HDSP Logo">
+              <img src="assets/gigba-logo-hd.png" alt="GIGBA Logo">
+              <img src="assets/gidco-logo-hd.png" alt="GIDCO Logo">
+              <img src="assets/SIGAC.svg" alt="SIGAC Logo">
+              <img src="assets/GeoTienda.jpg" alt="GeoTienda Logo">
+            </div>
         </div>
       </div>
       
